force-app/main/default/objects/Discount_Tier__c/Discount_Tier__c.object-meta.xml
<CustomObject>
    <label>Discount Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>