force-app/main/default/objects/Discount_Tier__c/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add-on</label>
    <referenceTo>Add_On__c</referenceTo>
    <relationshipLabel>Discount Tiers</relationshipLabel>
    <relationshipName>Discount_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>