force-app/main/default/objects/Discount_Tier__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <description>Minimum quantity required to hit this discount tier (inclusive).</description>
    <label>Lower Bound</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>