force-app/main/default/objects/Discount_Tier__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Discount Tiers</relationshipLabel>
    <relationshipName>Discount_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>