force-app/main/default/objects/Discount_Tier__c/fields/Quantity_Range__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Range__c</fullName>
    <label>Quantity Range</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>