force-app/main/default/objects/Discount_Tier__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Role</label>
    <referenceTo>Resource_Role__c</referenceTo>
    <relationshipLabel>Discount Tiers</relationshipLabel>
    <relationshipName>Discount_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>