force-app/main/default/objects/Discount_Tier__c/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <description>Maximum quantity required to hit this discount tier (inclusive). Leave blank for infinity.</description>
    <label>Upper Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>